--- a/sass/block/_about.scss
+++ b/sass/block/_about.scss
@@ -14,3 +14,16 @@
         }
     }
 }
+
+#about .container blockquote {
+    border: 5px solid $color-secondary;
+    padding: 1rem;
+    box-shadow: 0.5em 0.5em white;
+    margin: 2rem 0 3rem 0;
+        strong {
+            display: block;
+            color: $color-primary;
+            font-family: $primary-font;
+            margin-bottom: 1rem;
+        }
+}
