--- a/sass/block/_nav.scss
+++ b/sass/block/_nav.scss
@@ -2,13 +2,14 @@ nav {
     ul {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-around;
         li {
             list-style: none;
-            width: 33%;
             text-align: center;
             font-family: $primary-font;
-            @media screen and (min-width: 768px) {
-                width: 16%;
+            margin-bottom: 10%;
+            @media screen and (min-width: $desktop-size) {
+                margin-bottom: 3%;
             }
             a {
                 color: white;
