--- a/sass/global/_theme.scss
+++ b/sass/global/_theme.scss
@@ -4,6 +4,7 @@ $color-secondary: #37E9E9 !default;
 $color-background: #221D2D !default;
 $primary-font: "Bungee", sans-serif !default; 
 $secondary-font: "IBM Plex Mono", monospace !default;
+$desktop-size: 1000px;
 
 $brand-colors: (
   primary: $color-primary,
