--- a/sass/global/_theme.scss
+++ b/sass/global/_theme.scss
@@ -5,6 +5,8 @@ $color-background: #221D2D !default;
 $primary-font: "Bungee", sans-serif !default; 
 $secondary-font: "IBM Plex Mono", monospace !default;
 $desktop-size: 1000px;
+$button-font-size-desktop: 1.3em;
+$button-font-size-mobile: .9em;
 
 $brand-colors: (
   primary: $color-primary,
