--- a/public/style.css
+++ b/public/style.css
@@ -138,44 +138,6 @@ a {
   color: #37E9E9;
 }
 
-/*blockquote {
-  position: relative;
-  display: grid;
-  grid-template-areas: "blockquote";
-  place-items: center;
-  padding: 0;
-  margin: 3rem 0;
-
-  > * {
-    grid-area: blockquote;
-  }
-
-  p {
-    position: relative;
-    font-size: var(--font-size-h4);
-    margin-bottom: 0;
-    padding: 0.5em;
-
-    strong {
-      font-size: 1.15em;
-      font-family: $primary-font;
-      color: $color-primary;
-    }
-  }
-
-  &::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 4px solid var(--color-primary);
-    box-shadow: 0.25em 0.25em var(--color-secondary);
-    transform: scale(1.1);
-    content: "";
-  }
-
-} */
 #guidelines p:nth-of-type(1),
 #contribute p:nth-of-type(1) {
   font-size: var(--font-size-h4);
@@ -268,6 +230,8 @@ nav ul li {
   list-style: none;
   text-align: center;
   font-family: "Bungee", sans-serif;
+  margin-left: 10px;
+  margin-right: 10px;
   margin-bottom: 10%;
 }
 @media screen and (min-width: 1000px) {
@@ -310,6 +274,19 @@ nav ul li a {
 
 #guidelines section a {
   grid-column: 3/-3;
+}
+#guidelines section .link-guidelines {
+  margin-top: 2em;
+  margin-bottom: 4em;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-size: 0.9em;
+}
+@media screen and (min-width: 1000px) {
+  #guidelines section .link-guidelines {
+    grid-column: 5/9;
+    font-size: 1.3em;
+  }
 }
 
 #contribute section ol {
@@ -403,7 +380,6 @@ nav ul li a {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: 0 0.75em;
   transform: translate(0, 0);
   transition: 180ms all ease-in-out;
   font-size: 1.125rem;
