--- a/sass/block/_nav.scss
+++ b/sass/block/_nav.scss
@@ -7,13 +7,14 @@ nav {
             list-style: none;
             text-align: center;
             font-family: $primary-font;
+            margin-left: 10px;
+            margin-right: 10px;
             margin-bottom: 10%;
             @media screen and (min-width: $desktop-size) {
                 margin-bottom: 3%;
             }
             a {
                 color: white;
-                //text-decoration: $color-secondary underline wavy;
                 text-decoration: $color-secondary wavy underline;
                 text-underline-offset: 10px;
                 text-decoration-thickness: 3px;
